# Naux

./: README.md
docs/: ir_v0_1.md
examples/: sample.nx
naux-lang/: .gitignore  Cargo.toml  README.md  SPEC.md
naux-lang/docs/: IR_SPEC.md
naux-lang/examples/: algo_knapsack.nx  algo_lis.nx  algorithm_bfs.nx  bench.rs  graph_bfs.nx  graph_dijkstra.nx  hello.nx  oracle_demo.nx  sample.nx  ui_demo.nx
naux-lang/src/: ast.rs  lexer.rs  lib.rs  main.rs  token.rs
naux-lang/src/cli/: build.rs  dev.rs  fmt.rs  format.rs  init.rs  mod.rs  new.rs  run.rs  test.rs  util.rs
naux-lang/src/llvm/: codegen.rs  mod.rs
naux-lang/src/oracle/: mod.rs  request.rs  response.rs  stub.rs
naux-lang/src/parser/: error.rs  mod.rs  parser.rs  utils.rs
naux-lang/src/renderer/: cli.rs  css.rs  html.rs  mod.rs
naux-lang/src/runtime/: action.rs  env.rs  error.rs  eval.rs  events.rs  jit_helper.rs  mod.rs  run.rs  value.rs
naux-lang/src/stdlib/: algo.rs  collections.rs  graph.rs  list.rs  map.rs  math.rs  mod.rs  string.rs  test.rs
naux-lang/src/vm/: bytecode.rs  compiler.rs  interpreter.rs  ir.rs  jit.rs  llvm_backend.rs  mod.rs  run.rs
naux-lang/tests/: action_events.rs  algo_std.rs  collections.rs  disasm_tests.rs  error_tests.rs  expr_tests.rs  fn_tests.rs  graph_algo.rs  import_tests.rs  ir_vm_parity.rs  oracle_tests.rs  parser_tests.rs  renderer_tests.rs  runtime_tests.rs  unicode_tests.rs  vm_tests.rs
naux-rs/: Cargo.toml
naux-rs/src/: ast.rs  lexer.rs  lib.rs  main.rs  oracle.rs  parser.rs  renderer.rs  runtime.rs
naux-rs/tests/: naux_tests.rs
